# descratch

./: .gitmodules  README.md  meson.build  pyproject.toml
.github/workflows/: build.yml
doc/: descratch-rus.html  descratch.html
msvc/: DeScratch.sln  DeScratch.vcxproj  DeScratch.vcxproj.filters
src/: descratch.cpp
