[build-system]
requires = ["meson-python"]
build-backend = "mesonpy"

[project]
name = "vapoursynth-descratch"
description = "Scratch removing filter for VapourSynth"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Fredrik Mellbin", email = "fredrik.mellbin@gmail.com"},    
]
keywords = ["video", "scratch"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: C++",
    "Topic :: Multimedia :: Video",
]
dependencies = ["VapourSynth"]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/vapoursynth/descratch.git"
Issues = "https://github.com/vapoursynth/descratch/issues"

[tool.meson-python.wheel]
exclude = ["*/*.dll.a"]
